gitops/api/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbaas-api
  labels:
    app.kubernetes.io/part-of: dbaas
