gitops/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbaas-api
  namespace: dbaas-api
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.foyez.runs.onstackit.cloud
      secretName: dbaas-api-tls

  rules:
    - host: api.foyez.runs.onstackit.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbaas-svc
                port:
                  number: 8080
